--- a/public/styles.css
+++ b/public/styles.css
@@ -44,12 +44,22 @@ body {
   background-color: #128C7E;
   color: #fff;
   font-weight: bold;
-  font-size: 30px;
   padding: 15px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   height: 5vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   /* border: 2px solid red; */
+}
+
+.title {
+  font-size: 30px;
+}
+
+.online-status {
+  font-size: 20px;
 }
 
 .chat-messages {
